BSB/force-app/main/default/objects/Projet__c/fields/Accord_de_confidentialite__c.field-meta.xml
<CustomField>
    <fullName>Accord_de_confidentialite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Accord de confidentialité signé entre la structure et BSB</inlineHelpText>
    <label>Accord de confidentialité</label>
    <type>Checkbox</type>
</CustomField>