BSB/force-app/main/default/objects/Projet__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mise en relation</fullName>
            </value>
            <value>
                <fullName>Veille</fullName>
            </value>
            <value>
                <fullName>Expertise</fullName>
            </value>
            <value>
                <fullName>Ingénierie de projet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>