BSB/force-app/main/default/objects/Projet__c/fields/Aide_sollicitee__c.field-meta.xml
<CustomField>
    <fullName>Aide_sollicitee__c</fullName>
    <label>Aide sollicitée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>