BSB/force-app/main/default/objects/Projet__c/fields/Annee_d_ouverture_du_projet_au_sein_BSB__c.field-meta.xml
<CustomField>
    <fullName>Annee_d_ouverture_du_projet_au_sein_BSB__c</fullName>
    <formula>TEXT(YEAR(Date_d_ouverture_du_projet_au_sein_de_BS__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Année d&apos;ouverture du projet au sein BSB</label>
    <type>Text</type>
</CustomField>