BSB/force-app/main/default/objects/Projet__c/fields/Annee_de_cloture_du_projet_au_sein_BSB__c.field-meta.xml
<CustomField>
    <fullName>Annee_de_cloture_du_projet_au_sein_BSB__c</fullName>
    <formula>TEXT(YEAR(Date_de_cloture_du_projet_au_sein_de_BSB__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Année de clôture du projet au sein BSB</label>
    <type>Text</type>
</CustomField>