BSB/force-app/main/default/objects/Projet__c/fields/Annee_de_fin_du_projet__c.field-meta.xml
<CustomField>
    <fullName>Annee_de_fin_du_projet__c</fullName>
    <formula>TEXT(YEAR( Date_de_fin_du_projet__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Année de fin du projet</label>
    <type>Text</type>
</CustomField>