BSB/force-app/main/default/objects/Projet__c/fields/Budget_total__c.field-meta.xml
<CustomField>
    <fullName>Budget_total__c</fullName>
    <label>Budget total (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>