BSB/force-app/main/default/objects/Projet__c/fields/Contact_chez_le_porteur__c.field-meta.xml
<CustomField>
    <fullName>Contact_chez_le_porteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact chez le porteur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>projets</relationshipLabel>
    <relationshipName>projets</relationshipName>
    <type>Lookup</type>
</CustomField>