BSB/force-app/main/default/objects/Projet__c/fields/Date_d_ouverture_du_projet_au_sein_de_BS__c.field-meta.xml
<CustomField>
    <fullName>Date_d_ouverture_du_projet_au_sein_de_BS__c</fullName>
    <label>Date d&apos;ouverture du projet au sein BSB</label>
    <type>Date</type>
</CustomField>