BSB/force-app/main/default/objects/Projet__c/fields/Date_de_cloture_du_projet_au_sein_de_BSB__c.field-meta.xml
<CustomField>
    <fullName>Date_de_cloture_du_projet_au_sein_de_BSB__c</fullName>
    <label>Date fin accompagnement projet par BSB</label>
    <type>Date</type>
</CustomField>