BSB/force-app/main/default/objects/Projet__c/fields/Date_de_demarrage_du_projet__c.field-meta.xml
<CustomField>
    <fullName>Date_de_demarrage_du_projet__c</fullName>
    <label>Date de démarrage du projet</label>
    <type>Date</type>
</CustomField>