BSB/force-app/main/default/objects/Projet__c/fields/Date_de_fin_accord_de_confidentialit__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_accord_de_confidentialit__c</fullName>
    <label>Date de fin accord de confidentialité</label>
    <type>Date</type>
</CustomField>