BSB/force-app/main/default/objects/Projet__c/fields/Demande_de_financement__c.field-meta.xml
<CustomField>
    <fullName>Demande_de_financement__c</fullName>
    <label>Demande de financement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>