BSB/force-app/main/default/objects/Projet__c/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <formula>MID(Nom_du_porteur_du_projet__r.ShippingPostalCode, 1, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Département</label>
    <type>Text</type>
</CustomField>