BSB/force-app/main/default/objects/Projet__c/fields/Dispositifs_de_financement_vis_s__c.field-meta.xml
<CustomField>
    <fullName>Dispositifs_de_financement_vis_s__c</fullName>
    <label>Dispositif de financement visé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>