BSB/force-app/main/default/objects/Projet__c/fields/Etat_d_accompagnement_BSB__c.field-meta.xml
<CustomField>
    <fullName>Etat_d_accompagnement_BSB__c</fullName>
    <formula>if( ISBLANK(Date_de_cloture_du_projet_au_sein_de_BSB__c ),&quot;En cours&quot;,&quot;Terminé&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etat d&apos;accompagnement BSB</label>
    <type>Text</type>
</CustomField>