BSB/force-app/main/default/objects/Projet__c/fields/Etat_du_projet__c.field-meta.xml
<CustomField>
    <fullName>Etat_du_projet__c</fullName>
    <label>Etat d&apos;accompagnement du projet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>