BSB/force-app/main/default/objects/Projet__c/fields/Fili_re__c.field-meta.xml
<CustomField>
    <fullName>Fili_re__c</fullName>
    <label>Filière</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biotech</fullName>
            </value>
            <value>
                <fullName>Santé</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>