BSB/force-app/main/default/objects/Projet__c/fields/Labelisation__c.field-meta.xml
<CustomField>
    <fullName>Labelisation__c</fullName>
    <label>Labellisation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABT</fullName>
                <label>Atlanpole Biotherapies</label>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>EMC2</fullName>
            </value>
            <value>
                <fullName>ID4Car</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
                <label>Images &amp; Réseaux</label>
            </value>
            <value>
                <fullName>Pôle Mer Bretagne Atlantique</fullName>
            </value>
            <value>
                <fullName>Valorial</fullName>
            </value>
            <value>
                <fullName>Végépolys Valley</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>