BSB/force-app/main/default/objects/Projet__c/fields/Marche__c.field-meta.xml
<CustomField>
    <fullName>Marche__c</fullName>
    <label>Marché</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agro-industrie</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Biotech Pharma</fullName>
            </value>
            <value>
                <fullName>Cosmétique</fullName>
            </value>
            <value>
                <fullName>Eco-industries</fullName>
            </value>
            <value>
                <fullName>E-santé</fullName>
            </value>
            <value>
                <fullName>Technologies médicales</fullName>
            </value>
            <value>
                <fullName>Nutrition santé</fullName>
            </value>
            <value>
                <fullName>Alimentaire</fullName>
                <isActive>false</isActive>
                <label>Alimentaire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>