BSB/force-app/main/default/objects/Projet__c/fields/Nom_du_porteur_du_projet__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_porteur_du_projet__c</fullName>
    <label>Nom du compte porteur du projet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>projets</relationshipLabel>
    <relationshipName>projets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>