BSB/force-app/main/default/objects/Projet__c/fields/parfait__c.field-meta.xml
<CustomField>
    <fullName>parfait__c</fullName>
    <label>Aide obtenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>