BSB/force-app/main/default/objects/Projet__c/fields/Partenaires__c.field-meta.xml
<CustomField>
    <fullName>Partenaires__c</fullName>
    <description>Concatene les noms de comptes partenaires associés</description>
    <inlineHelpText>Mis à jour automatiquement après la mise à jour de comptes partenaires au projet</inlineHelpText>
    <label>Partenaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>