BSB/force-app/main/default/objects/Projet__c/fields/Prestation__c.field-meta.xml
<CustomField>
    <fullName>Prestation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestation</label>
    <referenceTo>Prestation__c</referenceTo>
    <relationshipLabel>Projets</relationshipLabel>
    <relationshipName>Projets</relationshipName>
    <type>Lookup</type>
</CustomField>