BSB/force-app/main/default/objects/Projet__c/fields/Projet_collaboratif__c.field-meta.xml
<CustomField>
    <fullName>Projet_collaboratif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Projet collaboratif</label>
    <type>Checkbox</type>
</CustomField>