BSB/force-app/main/default/objects/Projet__c/fields/Projet_europ_en__c.field-meta.xml
<CustomField>
    <fullName>Projet_europ_en__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Projet européen</label>
    <type>Checkbox</type>
</CustomField>