BSB/force-app/main/default/objects/Projet__c/fields/Retombees_du_projet__c.field-meta.xml
<CustomField>
    <fullName>Retombees_du_projet__c</fullName>
    <inlineHelpText>Précisez les retombées et suites du projet</inlineHelpText>
    <label>Retombées du projet</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>