BSB/force-app/main/default/objects/Projet__c/fields/Statut_de_la_demande_de_financement__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_la_demande_de_financement__c</fullName>
    <label>Statut de la demande de financement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceptée</fullName>
            </value>
            <value>
                <fullName>Refusée</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>A venir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>