BSB/force-app/main/default/objects/Projet__c/fields/Th_me__c.field-meta.xml
<CustomField>
    <fullName>Th_me__c</fullName>
    <label>Thème</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bien veillir</fullName>
            </value>
            <value>
                <fullName>Coproduits</fullName>
            </value>
            <value>
                <fullName>Cyber économie</fullName>
            </value>
            <value>
                <fullName>Environnement / Energie</fullName>
            </value>
            <value>
                <fullName>Handicap</fullName>
            </value>
            <value>
                <fullName>Mer</fullName>
            </value>
            <value>
                <fullName>Nutri / santé animale</fullName>
            </value>
            <value>
                <fullName>Nutri / santé humaine</fullName>
            </value>
            <value>
                <fullName>Nutri / santé végétale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>