BSB/force-app/main/default/objects/Projet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Numero_projet__c</columns>
    <columns>NAME</columns>
    <columns>Nom_du_porteur_du_projet__c</columns>
    <columns>Marche__c</columns>
    <columns>Projet_collaboratif__c</columns>
    <columns>Date_d_ouverture_du_projet_au_sein_de_BS__c</columns>
    <columns>Date_de_demarrage_du_projet__c</columns>
    <columns>Date_de_fin_du_projet__c</columns>
    <columns>Date_de_cloture_du_projet_au_sein_de_BSB__c</columns>
    <columns>Dispositifs_de_financement_vis_s__c</columns>
    <columns>Labelisation__c</columns>
    <columns>Budget_total__c</columns>
    <columns>parfait__c</columns>
    <columns>Etat_d_accompagnement_BSB__c</columns>
    <columns>Statut_de_la_demande_de_financement__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>