BSB/force-app/main/default/objects/Projet__c/listViews/Projets_collaboratifs.listView-meta.xml
<ListView>
    <fullName>Projets_collaboratifs</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Projet_collaboratif__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Projets collaboratifs</label>
</ListView>